About section modify

--- a/index.html
+++ b/index.html
@@ -83,25 +83,23 @@
             <img src="./images/about.png" alt="AI-powered clothing repair" />
           </div>
           <div class="about-text-content">
-            <h2 class="about-title">REVIVE. REWEAR. RAON</h2>
+            <h2 class="about-title">REVIVE. REWEAR. RAON.</h2>
             <div class="vision-section">
               <h3 class="section-heading">
                 To make repair and upcycling as convenient as buying new
               </h3>
-              <p class="section-text"></p>
+              
             </div>
             <div class="mission-section">
-              <h3 class="section-heading"></h3>
               <p class="section-text">
                 Every garment has memories woven into it. When it tears, you
                 don't have to let go. With haje, you can breathe new life into
-                the pieces you love. Just share a photo and your story
-                <br /><br />
+                the pieces you love. Just share a photo and your story - 
                 our AI will imagine what comes next. See it come to life through
                 a realistic visual preview. Connect with artisans who transform
                 your vision into reality. No matter the language you speak, haje
                 makes understanding effortless. Because repair isn't just about
-                clothes — it's about care, connection, and continuing a story.
+                clothes - it's about care, connection, and continuing a story.
               </p>
             </div>
             <div class="mission-section">
@@ -109,7 +107,6 @@
                 haje — Revive what you love. Rewear with purpose. Rediscover
                 joy.
               </h3>
-              <p class="section-text"></p>
             </div>
           </div>
         </div>
